  2) Implemented "lsblk" style for devices show.  Added "Verbose listing"
     option.
  3) The scripting examples are substantially remaked and unified, some errors
     are fixed, added "yad" support.
  4) Added internatialization for all scripts (currently only Russian
     translation present).
  5) Installation is simplified.  ".pro" and ".ebuild" files changed.
  6) Updated documentation in accordance with paragraphs 1-5.

v. 0.0.8 - 2018.09.13
  1) Enhanced config file synchronization.
  2) Changed the method of displaying the message "Devices not found."
  3) Changing the "Hidden devices" and "Show anyway" filds no longer requires
     restart the program.
  4) The "lock-crypsetup- *" scripts try to unmount all mountpoints of
     the containers FS, if necessary.  The "unlock-cryptsetup- *" scripts call
     the mount command if a FS is found in the container.  In all scripts
     fixed processing filenames and mountpoints containing non-ascii and
     nonprintable characters.
  5) Enhansed the order of displaying menu items.
  6) Changed the behavior of the "Eject" and "Remove" actions.  Added
     "Unmount all mountpoints" action.
  7) Updated the documentation.

v. 0.0.7 - 2018.06.13
  1) Added "Hide icon/Show in tray" feature.
  2) The scripting examples are substantially revised.  Added "Expect" and
     "Expect+Tk" scripts, as well as examples of using "gtkdialog" or
     "Xdialog" instead of "qarma"/"zenity".
  3) Added "Show anyway" feature.  Changed "Settings" dialog.
  4) Modified format of "Hidden devices" field in "Settings" dialog.
  5) Installation is simplified.  ".pro" and ".ebuild" files changed.
  6) Added and updated documentation in accordance with paragraphs 1-5.
  7) Refactoring, small enhancement, and noncritical errors fixes.

v. 0.0.6 - 2017.10.13
  1) Added Unix signal handling and correct termination on TERM, HUP, INT,
     QUIT signals.
  2) Added control (show menus) by SIGUSR1 and SIGUSR2 signals.