@@ -9,7 +9,9 @@ v. 0.0.9 -
   4) Добавлена интернационализация всех скриптов (в настоящее время доступен
      только русский перевод).
   5) Упрощена установка.  Изменены ".pro" и ".ebuild" файлы.
-  6) Обновлена документация в соответствии с пп. 1-5.
+  6) Улучшена обработка таймаутов при исполнении внешних программ.
+  7) Небольшой рефакторинг.
+  8) Обновлена документация в соответствии с пп. 1-6.
 
 v. 0.0.8 - 2018.09.13
   1) Улучшена синхронизация конфигурационного файла.
