@@ -81,6 +81,8 @@
   ~/.config/tmount/tmount.conf, which is created when you first start
   "tmount".  For running programs or scripts, set environment variables of
   the form "TMOUNT_<name>=<value>", where <name> is the key from this file.
+  In addition, the "Start_timeout" parameter (the time in seconds to start the
+  called programs) is set in this file.
 
       The program sees all the mountpoints created by the outside (by
   automounter, filemanager or manually), on the real or virtual ("loopback",
