@@ -89,7 +89,8 @@
   конфигурационного файла ~/.config/tmount/tmount.conf, который создаётся при
   первом запуске tmount.  Для выполняемых программ или скриптов
   устанавливаются переменные окружения вида "TMOUNT_<имя>=<значение>", где
-  <имя> - ключ из этого файла.
+  <имя> - ключ из этого файла.  Кроме того в этом файле задаётся параметр
+  Start_timeout (время в секундах для старта вызываемых программ).
 
       Программа видит все созданные вне её точки монтирования
   (автомонтировщиком, файл-менеджером или вручную) на физических или
